# llm-function-calling

./: .env_example  README.md  function_calling.py  function_calling_new.py  installation_steps.txt  langchain_function_calling.py  langchain_messages.py  llm_app.py  pyproject.toml  requirements.txt
